--- a/index.css
+++ b/index.css
@@ -1,4 +1,34 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  height: 100%;
+  width: 100%;
+  grid-template-columns: 1fr 1fr;
+}
+
+aside {
+  grid-column: 2/3;
+
+  /* top: 0;
+  right: 0; */
+}
+main {
+  grid-column: 1/2;
+  margin: 10px;
+  padding: 10px;
+}
+.card {
+  border: 2px solid black;
+  background-color: lightgray;
+  color: darkblue;
+  margin: 10px;
+  padding: 10px;
+}
+
+form {
 }
