--- a/index.css
+++ b/index.css
@@ -9,18 +9,28 @@ body {
   height: 100%;
   width: 100%;
   grid-template-columns: 1fr 1fr;
+  justify-content: center;
 }
 
 aside {
   grid-column: 2/3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   /* top: 0;
   right: 0; */
 }
-main {
+.main {
+  display: flex;
+  flex-direction: column;
   grid-column: 1/2;
   margin: 10px;
   padding: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 550px;
+  height: 450px;
 }
 .card {
   border: 2px solid black;
@@ -28,7 +38,22 @@ main {
   color: darkblue;
   margin: 10px;
   padding: 10px;
+  width: 300px;
+  height: 250px;
 }
 
 form {
+}
+
+.Person {
+  border: 2px solid black;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 250px;
+}
+.buttons {
+  padding: 10px;
+  margin: 20px;
 }
