--- a/index.css
+++ b/index.css
@@ -17,29 +17,20 @@ aside {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  /* top: 0;
-  right: 0; */
+  flex-direction: column;
 }
 .main {
+  grid-column: 1/2;
   display: flex;
   flex-direction: column;
-  grid-column: 1/2;
+
   margin: 10px;
   padding: 10px;
   align-items: center;
   justify-content: center;
-  width: 550px;
-  height: 450px;
-}
-.card {
-  border: 2px solid black;
-  background-color: lightgray;
-  color: darkblue;
-  margin: 10px;
-  padding: 10px;
-  width: 300px;
-  height: 250px;
+  /* width: 550px;
+  height: 450px; */
+  flex-wrap: wrap;
 }
 
 form {
@@ -57,3 +48,20 @@ form {
   padding: 10px;
   margin: 20px;
 }
+/* #childForm {
+  border: 2px solid black;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 250px;
+} */
+
+/* #siblingForm {
+  border: 2px solid black;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 250px;
+} */
